Bug 116407 - option "Border" for new table redundant
Summary: option "Border" for new table redundant
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks: Options-Dialog Writer-Tables
  Show dependency treegraph
 
Reported: 2018-03-14 19:10 UTC by Cor Nouws
Modified: 2021-03-03 11:44 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2018-03-14 19:10:11 UTC
Description:
The border checkbox in Tools-> Options -> LibreOffice Writer -> Table -> New Table defaults is redundant after change of the Inster Table dialog.


Steps to Reproduce:
Check or unckeck the border checkbox in Tools-> Options -> LibreOffice Writer -> Table -> New Table.
Insert new table in Writer document

Actual Results:  
 > No effect on new table

Expected Results:
the option should not exist


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:58.0) Gecko/20100101 Firefox/58.0
Comment 1 Xisco Faulí 2018-03-16 10:09:53 UTC
I guess the option has been there since the beginning...
Comment 2 Thomas Lendo 2018-03-16 22:26:50 UTC
For me, the whole section "New Table Defaults" is obsolete since we've table styles in Writer.

Before we invest time to repair it (how should it interfere with styles?) we should drop it completely. Users should change the default table style if they want no borders, etc.

But this also means that the bugs in the current table style implementation should be fixed so that users can modify them.
Comment 3 Heiko Tietze 2018-03-19 13:29:18 UTC
Think Cor filed this one as spin-off from bug 113558 where we also talked about layouts. But I agree that "Border" on/off is doomed.
Comment 4 Heiko Tietze 2018-03-26 12:57:02 UTC
Patch at https://gerrit.libreoffice.org/#/c/51896/
Comment 5 Commit Notification 2018-03-28 17:51:24 UTC
heiko tietze committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b57e8b5e531408236af5e3be69b9190c646a6eab

tdf#116407 - option "Border" for new table redundant

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Cor Nouws 2019-02-16 13:53:36 UTC
(In reply to Xisco Faulí from comment #1)
> I guess the option has been there since the beginning...
True, but then it made sense ;)
Comment 7 Dieter 2019-07-19 14:47:18 UTC
Perhaps I missed something, but I still can see the border option in

Tools => Options => LibreOffice Writer => Table => New Table Defaults

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 2f2f4767089512c34514896bc37823f9310e9dd4
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-07-10_02:13:57
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

and

Version: 6.2.5.2 (x64)
Build-ID: 1ec314fa52f458adc18c4f025c545a4e8b22c159
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 8 Heiko Tietze 2019-07-22 08:21:49 UTC
My patch is for Table > Convert > Text to Table only. @Cor, @Dieter: Do you think we do have to remove Border from Tools > Options too?
Comment 9 Dieter 2019-07-22 08:47:13 UTC
I think border option is useful if you use "Insert Table"-icon. So that's an argument for border option in option dialog.

I must admit, I wasn't aware of the possibility to convert text to table. What I would expect, is that a table crated this way, has also a border, if border setting is enabled in the option dialog.
Comment 10 Heiko Tietze 2019-07-22 08:55:53 UTC
(In reply to Dieter Praas from comment #9)
> What I would expect, is that a table crated this way, has also a border, if
> border setting is enabled in the option dialog.

Which would mean a table style is applied. It's a clear yes if it was a real style but TS are just templates - OTOH, users will not see the difference.
Comment 11 Dieter 2019-07-22 10:19:27 UTC
I'm confused (but not for the first time with this topic).

I suppose that if a table has a style, I can see this style in the navigator (table styles). So if there is no style highlighted with an inserted table, this is a template-table. I can see three ways to insert such a table:

1. Strg+F12 or Table => Insert Table => Styles: None
2. Insert Table button
3. Table => Convert = Text to table

With border-option enabled I get a table with borders in case 2 and a table without borders in case 1 and 3. If all tables are templates, behaviour with borders should be the same.
Comment 12 Cor Nouws 2019-07-25 19:36:17 UTC
(In reply to Dieter Praas from comment #11)
> I'm confused (but not for the first time with this topic).
#metoo
Comment 13 Heiko Tietze 2019-08-27 07:16:56 UTC
(In reply to Dieter Praas from comment #11)
> I suppose that if a table has a style, I can see this style in the navigator
> (table styles). 

With my patch you will see Default (or whatever is selected in the Table>Insert Table dialog) highlighted, if you don't switch to None. We would have to add this style to the sidebar as well but it was out of my capabilities.

> 1. Strg+F12 or Table => Insert Table => Styles: None
> 2. Insert Table button

The code is different here and while it may look like Default it isn't.

> 3. Table => Convert = Text to table

Again, something else. The code spaghettiness has no limit when it comes to tables.

> With border-option enabled I get a table with borders in case 2 and a table
> without borders in case 1 and 3. If all tables are templates, behaviour with
> borders should be the same.

My point in c8 was that T>O>Border is deprecated by styles. You should enable borders by changing the style not by an option.
Comment 14 Dieter 2019-08-27 15:10:44 UTC
(In reply to Heiko Tietze from comment #13)
> My point in c8 was that T>O>Border is deprecated by styles. You should
> enable borders by changing the style not by an option.

So you propose to skip the border option? I agree, if this refuses confusion.
Comment 15 Dieter 2021-02-27 05:19:32 UTC
(In reply to Dieter from comment #14)
> So you propose to skip the border option?

Question is still valid. So what do you think, Heiko?
Comment 16 Heiko Tietze 2021-03-01 08:44:14 UTC
(In reply to Dieter from comment #14)
> So you propose to skip the border option? I agree, if this refuses confusion.

Ideally, we have a perfectly working Table Style solution (and perhaps allow to change the default in tools > options) and apply this with all methods of inserting a table. But there are currently different ways, and the toolbar and sidebar command does not apply a table style. Meaning the tools > options border setting is functional for this use case. I wouldn't remove it for now.

Btw, haven't checked but IIUC the methods effectively come to the same result since Table Styles are rather a template.