tdf#116407 - option "Border" for new table redundant

Function removed

Change-Id: I2346a0ba91afb72c7c68a6d50fc103d0409ae374